--- a/views/user_edit.hbs
+++ b/views/user_edit.hbs
@@ -1,12 +1,6 @@
 <div class="col-md-12">
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
-			{{#if message}}
-				<div class="alert alert-{{ message_type}} alert-dismissable">
-					<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-					{{message}}
-				</div>
-			{{/if}}
 			<ol class="breadcrumb">
 	  			<li><a href="/">Home</a></li>
 	 			<li><a href="/Users">Users</a></li>
@@ -15,21 +9,35 @@
 			<h1>User edit</h1>
 			<form method="post" id="edit_form" action="/user_update">
 			<input type="hidden" name="user_id" value="{{user._id}}" />
+            <div class="form-group">
+		    	<label>Users name</label>
+		    	<input type="text" class="form-control" name="users_name" value="{{user.users_name}}" required>
+			  	<p class="help-block val-error"></p>
+		  	</div>
 			<div class="form-group">
-		    	<label for="frm_kb_title">User email</label>
+		    	<label>User email</label>
 		    	<input type="text" class="form-control" name="user_email" value="{{user.user_email}}" readonly>
 			  	<p class="help-block val-error"></p>
 		  	</div>
 		  	<div class="form-group">
-			    <label for="frm_kb_body">User password</label>
-			    <input type="password" class="form-control" name="user_password" required>
+			    <label>User password {{#ifCond session.user '==' user.user_email}}*{{/ifCond}}</label>
+			    <input type="password" class="form-control" name="user_password" {{#ifCond session.user '==' user.user_email}}required{{/ifCond}}>
 				<p class="help-block val-error"></p>
 		  	</div>
 		  	<div class="form-group">
-			    <label for="frm_kb_body">Password confirm</label>
-			    <input type="password" data-validation-match-match="user_password" data-validation-match-message="Password values to not match" class="form-control" name="frm_user_password_confirm" required>
+			    <label>Password confirm {{#ifCond session.user '==' user.user_email}}*{{/ifCond}}</label>
+			    <input type="password" data-validation-match-match="user_password" data-validation-match-message="Password values to not match" class="form-control" name="frm_user_password_confirm" {{#ifCond session.user '==' user.user_email}}required{{/ifCond}}>
 				<p class="help-block val-error"></p>
 		  	</div>
+            {{#is_an_admin session.is_admin}}
+                {{#ifCond session.user '!=' user.user_email}}
+                    <div class="checkbox">
+                        <label>
+                            <input name="user_admin" {{#checked_state user.is_admin}}{{/checked_state}} type="checkbox"> User is admin?
+                        </label>
+                    </div>
+                {{/ifCond}}
+            {{/is_an_admin}}
 		  	<div class="form-group">
     			<div class="pull-right">
       				<button type="submit" class="btn btn-primary">Update</button>
