--- a/views/user_new.hbs
+++ b/views/user_new.hbs
@@ -8,18 +8,23 @@
 			</ol>
 			<h1>New User</h1>
 			<form method="post" id="edit_form" action="/user_insert">
+            <div class="form-group">
+		    	<label>Users name *</label>
+		    	<input type="text" class="form-control" name="users_name" value="{{user.users_name}}" required>
+			  	<p class="help-block val-error"></p>
+		  	</div>
 			<div class="form-group">
-		    	<label for="frm_kb_title">User email</label>
+		    	<label>User email *</label>
 		    	<input type="email" class="form-control" name="user_email" value="{{user.user_email}}" required>
 			  	<p class="help-block val-error"></p>
 		  	</div>
 		  	<div class="form-group">
-			    <label for="frm_kb_body">User password</label>
+			    <label>User password *</label>
 			    <input type="password" class="form-control" name="user_password" required>
 				<p class="help-block val-error"></p>
 		  	</div>
 		  	<div class="form-group">
-			    <label for="frm_kb_body">Password confirm</label>
+			    <label>Password confirm *</label>
 			    <input type="password" data-validation-match-match="user_password" data-validation-match-message="Password values to not match" class="form-control" name="frm_user_password_confirm" required>
 				<p class="help-block val-error"></p>
 		  	</div>
