--- a/views/users.hbs
+++ b/views/users.hbs
@@ -9,20 +9,19 @@
 			<ul class="list-group">
 				{{#each users}}
 					<li class="list-group-item">
-						<strong>User: </strong>
-				  		{{#ifCond this.user_email '==' ../session.user}}
-					  		<a href="/user/edit/{{this._id}}">{{this.user_email}}</a>
-					  	{{/ifCond}}
-					  	{{#ifCond this.user_email '!=' ../session.user}}
-							  {{this.user_email}}
-						{{/ifCond}}	  
-				  		<span class="pull-right">		
-							{{#ifCond this.user_email '!=' ../session.user}}
-								{{#is_an_admin ../../session.is_admin}}
-									<a href="/user/edit/{{this._id}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
-									<a href="/user/delete/{{this._id}}"><span class="glyphicon glyphicon-trash" aria-hidden="true"></a>
-								{{/is_an_admin}}
-							{{/ifCond}}
+						<strong>User:</strong> {{this.users_name}} - ({{this.user_email}}) 
+				  		<span class="pull-right">	
+                            <strong>Role: </strong>
+                            {{#is_an_admin this.is_admin}}
+                                <span>Admin</span>
+                            {{else}}
+                                <span>User</span>
+                            {{/is_an_admin}}
+                            
+                            {{#is_an_admin ../session.is_admin}}
+                                <a href="/user/edit/{{this._id}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
+                                <a href="/user/delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete?')"><span class="glyphicon glyphicon-trash" aria-hidden="true"></a>
+                            {{/is_an_admin}}
 						</span>
 					</li>
 				{{/each}}
