[Fix #39] - Removed all CDN and added to project.

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -8,7 +8,7 @@
 		<meta name="description" content="Powered by openKB">
 		<meta name="keywords" content="openKB">
 		<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css">
+		<link rel="stylesheet" href="/stylesheets/flatly.bootstrap.min.css">
 		<link rel="stylesheet" href="/stylesheets/style.css">
 		<link rel="stylesheet" href="/stylesheets/bootstrap-markdown.min.css">
 		<link rel="stylesheet" href="/stylesheets/font-awesome.min.css">
@@ -20,7 +20,7 @@
 		<script src="/javascripts/bootstrap-markdown.js"></script>
 		<script src="/javascripts/mermaid.min.js"></script>
 		<script src="/javascripts/markdown-it-classy.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tokenfield/0.12.0/bootstrap-tokenfield.min.js"></script>
+		<script src="/javascripts/bootstrap-tokenfield.min.js"></script>
 		<script src="/javascripts/jquery.inline-attachment.min.js"></script>
 		<script src="/javascripts/openKB.js"></script>
 	</head>
