[Fix #38] - Fixed the status and keywords being incorrect on adding new articles.

--- a/views/articles.hbs
+++ b/views/articles.hbs
@@ -5,7 +5,9 @@
 	  			<li><a href="/">Home</a></li>
 	 			<li class="active">Articles</li>
 			</ol>
-			<h1>Articles</h1>
+            <div class="col-lg-12">
+                <h1>Articles</h1>
+            </div>
 			<div class="col-lg-12 search_bar pad-bottom">
 				<div class="input-group">
 					<input type="text" name="article_filter" id="article_filter" class="form-control input-lg" placeholder="Filter articles">
