[Fix #44] - Added better form validation

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -118,6 +118,11 @@ html{
     background-color: #e74c3c;
 }
 
+.popover-title{
+    background-color: #e74c3c;
+    color: white;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
