--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -1,14 +1,13 @@
 <div class="col-xs-12 col-md-10 col-md-offset-1">
 	<div class="row">
 		<div class="col-lg-12">
-			<form method="post" id="insert_form" action="/insert_kb">
+			<form method="post" id="insert_form" action="/insert_kb" data-toggle="validator">
 				<div id="header">
 					<div class="col-lg-12">
 						<div class="col-xs-12 col-lg-6">
 							<div class="form-group">
 								<label for="frm_kb_title">Article title *</label><br/>
 								<input type="text" name="frm_kb_title" class="form-control input-normal" minlength="5" maxlength="200" value="{{kb_title}}" required/>
-								<p class="help-block val-error"></p>
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-5 col-md-5 col-lg-2">
