--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,9 +1,9 @@
-<div class="col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4" style="padding-top: 100px">
-	<form class="form-signin" action="login_action" method="post" role="form">
+<div class="col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4" style="padding-top: 100px" >
+	<form class="form-signin" action="login_action" method="post" role="form" data-toggle="validator">
 		<input type="hidden" name="frm_referring_url" value="{{referring_url}}">
 		<h2 class="form-signin-heading">Please sign in</h2>
 		<div class="form-group">
-			<input type="text" name="email" class="form-control" placeholder="email address" value="" required autofocus>
+			<input type="email" name="email" class="form-control" placeholder="email address" value="" required autofocus>
 		</div>
 		<div class="form-group">
 			<input type="password" name="password" class="form-control" placeholder="Password" value="" required>
