--- a/views/user_edit.hbs
+++ b/views/user_edit.hbs
@@ -7,27 +7,23 @@
 	  			<li class="active">User edit</li>
 			</ol>
 			<h1>User edit</h1>
-			<form method="post" id="edit_form" action="/user_update">
+			<form method="post" id="edit_form" action="/user_update" data-toggle="validator">
 			<input type="hidden" name="user_id" value="{{user._id}}" />
             <div class="form-group">
 		    	<label>Users name</label>
 		    	<input type="text" class="form-control" name="users_name" value="{{user.users_name}}" required>
-			  	<p class="help-block val-error"></p>
 		  	</div>
 			<div class="form-group">
 		    	<label>User email</label>
 		    	<input type="text" class="form-control" name="user_email" value="{{user.user_email}}" readonly>
-			  	<p class="help-block val-error"></p>
 		  	</div>
 		  	<div class="form-group">
 			    <label>User password {{#ifCond session.user '==' user.user_email}}*{{/ifCond}}</label>
 			    <input type="password" class="form-control" name="user_password" {{#ifCond session.user '==' user.user_email}}required{{/ifCond}}>
-				<p class="help-block val-error"></p>
 		  	</div>
 		  	<div class="form-group">
 			    <label>Password confirm {{#ifCond session.user '==' user.user_email}}*{{/ifCond}}</label>
 			    <input type="password" data-validation-match-match="user_password" data-validation-match-message="Password values to not match" class="form-control" name="frm_user_password_confirm" {{#ifCond session.user '==' user.user_email}}required{{/ifCond}}>
-				<p class="help-block val-error"></p>
 		  	</div>
             {{#is_an_admin session.is_admin}}
                 {{#ifCond session.user '!=' user.user_email}}
