Fix #46 - Added "Share article" links in the Article meta data section

--- a/views/kb.hbs
+++ b/views/kb.hbs
@@ -20,19 +20,28 @@
 			<div class="panel panel-primary" style="margin-top: 35px;">
 				<div class="panel-heading">Article details:</div>
 				<div class="panel-body">
-					<h5>
+                    <h5 class="col-sm-12 col-lg-6">
 						<strong>Published date:</strong> {{format_date result.kb_published_date 'DD/MM/YYYY h:mmA'}}
 					</h5>
-					<h5>
+					<h5 class="col-sm-12 col-lg-6">
 						<strong>Last updated:</strong> {{format_date result.kb_last_updated 'DD/MM/YYYY h:mmA'}}
 					</h5>
+                    {{#if result.kb_permalink}}
+                        <h5 class="col-sm-12 col-lg-6">
+                            <strong>Share article:</strong>&nbsp;<a href="mailto:?subject={{result.kb_title}}&body={{result.kb_permalink}}" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                        </h5>
+                    {{else}}
+                        <h5 class="col-sm-12 col-lg-6">
+						    <strong>Share article:</strong>&nbsp;<a href="mailto:?subject={{result.kb_title}}&body={{current_url}}/kb/{{result._id}}" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+					    </h5>
+                    {{/if}}
                     {{#if result.kb_author}}
-                        <h5>
+                        <h5 class="col-sm-12 col-lg-6">
                             <strong>Author:</strong> {{result.kb_author}} {{#if config.settings.show_author_email}}({{result.kb_author_email}}){{/if}}
                         </h5>
                     {{/if}}
 					{{#if result.kb_permalink}}
-					<h5>
+					<h5 class="col-sm-12 col-lg-6">
 						<strong>Permalink:</strong> <a href="{{current_url}}/kb/{{result.kb_permalink}}" target="_blank">{{current_url}}/kb/{{result.kb_permalink}}</a>
 					</h5>
 					{{/if}}
