--- a/views/articles.hbs
+++ b/views/articles.hbs
@@ -26,7 +26,7 @@
 						</li>
 						{{#each results}}
 							<li class="list-group-item">
-								<h4 class="pull-right" style="padding-left: 10px;"><a href="delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete this article?');"> <i class="fa fa-trash-o"></i></a></h4>
+								<h4 class="pull-right" style="padding-left: 10px;"><a href="/delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete this article?');"> <i class="fa fa-trash-o"></i></a></h4>
 								<h4 class="pull-right"><input id="{{this._id}}" class="published_state" type="checkbox" {{checked_state this.kb_published}}></h4>
 								<h5><a href="/edit/{{this._id}}">{{this.kb_title}}</a></h5>
 							</li>
