--- a/views/kb.hbs
+++ b/views/kb.hbs
@@ -13,9 +13,9 @@
 <div class="row">
 	<div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
 		<h1 style="padding-bottom: 25px;padding-top: 15px;">{{result.kb_title}}</h1>
-		<p class="body_text">
+		<div class="body_text">
             {{{kb_body}}}
-        </p>
+        </div>
 		{{#if config.settings.show_kb_meta}}
 			<div class="panel panel-primary" style="margin-top: 35px;">
 				<div class="panel-heading">Article details:</div>
