[Fix #52] - Articles view in admin now has "show all" button

--- a/views/articles.hbs
+++ b/views/articles.hbs
@@ -14,6 +14,7 @@
 					<span class="input-group-btn">
 						<button class="btn btn-success btn-lg" id="btn_articles_filter">Filter</button>
 						<button class="btn btn-warning btn-lg" id="btn_articles_reset">Reset</button>
+                        <a class="btn btn-info btn-lg" href="/articles/all">All</a>
 					</span>
 				</div>
 			</div>
