[FIx #55] - Now also supports inline attachment of DOC, DOCX, XLS, XLSX and PDF files.

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -21,7 +21,7 @@
 		<script src="/javascripts/mermaid.min.js"></script>
 		<script src="/javascripts/markdown-it-classy.js"></script>
 		<script src="/javascripts/bootstrap-tokenfield.min.js"></script>
-		<script src="/javascripts/jquery.inline-attachment.min.js"></script>
+		<script src="/javascripts/jquery.inline-attachment.js"></script>
 		<script src="/javascripts/openKB.js"></script>
 	</head>
 	<body class="{{show_footer}}">	
@@ -63,7 +63,7 @@
 								<ul class="dropdown-menu">
 									<li><a href="/files"><i class="fa fa-files-o fa-fw"></i>&nbsp; Files</a></li>
 									<li><a href="/export"><i class="fa fa-file-archive-o fa-fw"></i>&nbsp; Export</a></li>
-									<li><a href="/image_cleanup"><i class="fa fa-trash fa-fw"></i>&nbsp; Cleanup images</a></li>
+									<li><a href="/file_cleanup"><i class="fa fa-trash fa-fw"></i>&nbsp; Cleanup files</a></li>
 								</ul>
 							</li>
 							<li><a href="/logout">Logout</a></li>
