added index for tags only

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -51,7 +51,7 @@
 								{{#each this}}
 									<div class="col-md-4">
 										<div class="panel panel-default">
-											<div class="panel-heading"><a href="/search/{{this.keyword}}">{{this.keyword}}</a></div>
+											<div class="panel-heading"><a href="/searchtag/{{this.keyword}}">{{this.keyword}}</a></div>
 											<table class="table">
 												{{#each this.results}}
 													<tr><td>
