--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -29,7 +29,7 @@
             <div class="col-xs-12 col-md-6 col-lg-6">
                 <div class="form-group" id="editor-wrapper">
                     <label for="editor">Article body (Markdown) *</label>
-                    <textarea id="editor" minlength="5" name="frm_kb_body" class="form-control" required>{{kb_body}}</textarea>
+                    <textarea id="editor" minlength="5" name="frm_kb_body" data-provide="markdown" data-hidden-buttons="cmdPreview" data-iconlibrary="fa" class="form-control" required>{{kb_body}}</textarea>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6 col-lg-6">
@@ -58,8 +58,4 @@
             </div>
         </footer>
     </form>
-	{{#if editor}}
-		<script src="/javascripts/markdown-it.min.js"></script>
-		<script src="/javascripts/markdown-editor.js"></script>
-	{{/if}}
 </div>
