--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -9,19 +9,21 @@
 		<meta name="keywords" content="openKB">
 		<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 		<link rel="stylesheet" href="/stylesheets/flatly.bootstrap.min.css">
+        <link rel="stylesheet" href="/stylesheets/simplemde.min.css">
 		<link rel="stylesheet" href="/stylesheets/style.css">
-		<link rel="stylesheet" href="/stylesheets/bootstrap-markdown.min.css">
 		<link rel="stylesheet" href="/stylesheets/font-awesome.min.css">
 		<link rel="stylesheet" href="/stylesheets/mermaid.css">
 		<link rel="stylesheet" href="/stylesheets/bootstrap-tokenfield.css">
 		<script src="/javascripts/jquery-2.1.4.min.js"></script>
 		<script src="/javascripts/bootstrap.min.js"></script>
         <script src="/javascripts/bootstrap-validator.js"></script>
-		<script src="/javascripts/bootstrap-markdown.js"></script>
 		<script src="/javascripts/mermaid.min.js"></script>
 		<script src="/javascripts/markdown-it-classy.js"></script>
 		<script src="/javascripts/bootstrap-tokenfield.min.js"></script>
-		<script src="/javascripts/jquery.inline-attachment.js"></script>
+        <script src="/javascripts/inline-attachment.js"></script>
+		<script src="/javascripts/codemirror.inline-attachment.js"></script>
+        <script src="/javascripts/simplemde.min.js"></script>
+		<script src="/javascripts/markdown-it.min.js"></script>
 		<script src="/javascripts/openKB.js"></script>
 	</head>
 	<body class="{{show_footer}}">	
