--- a/views/suggest.hbs
+++ b/views/suggest.hbs
@@ -18,7 +18,7 @@
 				<div class="col-xs-12 col-md-6">
 					<div class="form-group" id="editor-wrapper">
 						<label for="editor">Article body (Markdown) *</label>
-						<textarea id="editor" minlength="5" name="frm_kb_body" class="form-control" required>{{{result.kb_body}}}</textarea>
+                        <textarea id="editor" minlength="5" name="frm_kb_body" data-provide="markdown" data-hidden-buttons="cmdPreview" data-iconlibrary="fa" class="form-control" required>{{{result.kb_body}}}</textarea>
 					</div>
 				</div>
 				<div class="col-xs-12 col-md-6">
@@ -38,8 +38,4 @@
 			</footer>
 		</form>
 	</div>
-	{{#if editor}}
-		<script src="/javascripts/markdown-it.min.js"></script>
-		<script src="/javascripts/markdown-editor.js"></script>
-	{{/if}}
 </div>
