Moved as much front end stuff to NPM, cleaned up files,  added code highlight on frontend and editor preview, finally upgraded jQuery version.

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -7,23 +7,25 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="description" content="Powered by openKB">
 		<meta name="keywords" content="openKB">
-		<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+		<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/stylesheets/flatly.bootstrap.min.css">
-        <link rel="stylesheet" href="/stylesheets/simplemde.min.css">
+        <link rel="stylesheet" href="/simplemde/simplemde.min.css">
+        <link rel="stylesheet" href="/stylesheets/github.css">
 		<link rel="stylesheet" href="/stylesheets/style.css">
-		<link rel="stylesheet" href="/stylesheets/font-awesome.min.css">
+		<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" href="/stylesheets/mermaid.css">
 		<link rel="stylesheet" href="/stylesheets/bootstrap-tokenfield.css">
-		<script src="/javascripts/jquery-2.1.4.min.js"></script>
-		<script src="/javascripts/bootstrap.min.js"></script>
+		<script src="/jquery/jquery.min.js"></script>
+		<script src="/bootstrap/js/bootstrap.min.js"></script>
         <script src="/javascripts/bootstrap-validator.js"></script>
 		<script src="/javascripts/mermaid.min.js"></script>
 		<script src="/javascripts/markdown-it-classy.js"></script>
 		<script src="/javascripts/bootstrap-tokenfield.min.js"></script>
         <script src="/javascripts/inline-attachment.js"></script>
 		<script src="/javascripts/codemirror.inline-attachment.js"></script>
-        <script src="/javascripts/simplemde.min.js"></script>
-		<script src="/javascripts/markdown-it.min.js"></script>
+        <script src="/javascripts/highlight.min.js"></script>
+        <script src="/simplemde/simplemde.min.js"></script>
+		<script src="/markdown-it/markdown-it.min.js"></script>
 		<script src="/javascripts/openKB.js"></script>
 	</head>
 	<body class="{{show_footer}}">	
